@@ -1,5 +1,9 @@
 2009-06-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/libYARP_OS/include/yarp/os/impl/ThreadImpl.h: avoid using
+	ACE_Auto_Event class, in favor of Semaphores - just because
+	they have been more tested against different ACE builds.
+
 	* src/libYARP_OS/harness/ThreadTest.cpp: regression test for
 	isRunning() was not quite right, it could fail even for 
 	correct behavior.
